--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,21 +9,21 @@
 <body>
   <div id="container" class="container">
     <div class="row">
-      <div class="small-6 small-centered columns">
+      <div class="large-6 large-centered small-12 columns">
         <h1 class="subheader">What's for dinner</h1>
       </div>
     </div>
 
     <div class="row">
-      <div class="small-3 columns">
+      <div class="small-12 large-6 push-3 columns">
+        <div ng-view></div>
+      </div>
+      <div class="small-12 large-3 pull-9 columns">
         <ul class="side-nav">
           <li><a href="/choose" nav-link>Choose</a></li>
           <li><a href="/recipes" nav-link>View all recipes</a></li>
           <li><a href="/new" nav-link>Add new recipe</a></li>
         </ul>
-      </div>
-      <div class="small-6 columns pull-3">
-        <div ng-view></div>
       </div>
     </div>
     <div id="container-footer"></div>
